--- a/SongThrush/app/src/main/res/drawable/check_button.xml
+++ b/SongThrush/app/src/main/res/drawable/check_button.xml
@@ -3,17 +3,17 @@
 
     <item android:state_checked="false">
         <shape android:shape="oval">
-            <size android:width="30dp"/>
-            <size android:height="30dp"/>
-            <stroke android:width="1dp" android:color="@color/colorAccent"/>
+            <size android:width="150dp"/>
+            <size android:height="150dp"/>
+            <solid android:color="@color/colorAccent"/>
         </shape>
     </item>
 
     <item android:state_checked="true" android:drawable="@drawable/ic_check_white_24dp">
         <shape android:shape="oval" >
-            <size android:width="30dp"/>
-            <size android:height="30dp"/>
-            <stroke android:width="1dp" android:color="@color/colorAccent"/>
+            <size android:width="150dp"/>
+            <size android:height="150dp"/>
+            <solid android:color="@color/colorAccent"/>
 
         </shape>
     </item>
