--- a/SongThrush/app/src/main/res/layout/tracks_recyclerview.xml
+++ b/SongThrush/app/src/main/res/layout/tracks_recyclerview.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/colorPrimaryDark"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
@@ -11,7 +12,7 @@
         android:clickable="true"
         android:focusable="true"
         android:id="@+id/trackLayout"
-        android:background="@color/colorPrimaryDark">
+        android:background="?android:attr/selectableItemBackground">
 
         <com.facebook.drawee.view.SimpleDraweeView
             android:layout_width="64dp"
